--- a/sass/main.scss
+++ b/sass/main.scss
@@ -15,8 +15,8 @@ $text-second-color: #9da4bd;
 $white-bg-color: #f7f7f7;
 $black-bg-color: #111319;
 
-$primary-fonts: 'Open Sans';
-$accent-fonts: 'Raleway';
+$primary-fonts: "Open Sans";
+$accent-fonts: "Raleway";
 
 p,
 h1,
@@ -48,7 +48,7 @@ img {
 }
 
 body {
-  font-family: 'Open Sans', 'Raleway', sans-serif;
+  font-family: "Open Sans", "Raleway", sans-serif;
 }
 
 .container {
@@ -85,7 +85,7 @@ body {
 }
 
 .pre-title::before {
-  content: '';
+  content: "";
   width: 60px;
   height: 1px;
   display: block;
@@ -209,7 +209,7 @@ body {
   gap: 40px;
 
   &--static::before {
-    content: '';
+    content: "";
     width: 60px;
     height: 1px;
     background: currentColor;
@@ -232,11 +232,7 @@ body {
 .hero__wrap {
   padding: 272px 526px 208px 100px;
   flex-grow: 1;
-  background-image: linear-gradient(
-      rgba(25, 28, 38, 0.2),
-      rgba(25, 28, 38, 0.2)
-    ),
-    url(../images/hero-bg.jpg);
+  background-image: linear-gradient(rgba(25, 28, 38, 0.2), rgba(25, 28, 38, 0.2)), url(../images/hero-bg.jpg);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
@@ -413,7 +409,7 @@ body {
   }
 
   &--static::after {
-    content: '';
+    content: "";
     height: 1px;
     width: 60px;
     background: rgba(157, 164, 189, 0.12);
@@ -501,7 +497,7 @@ body {
   justify-content: center;
 
   &--static::after {
-    content: '+';
+    content: "+";
     font-weight: 600;
     font-size: 16px;
     line-height: 1.37;
@@ -928,7 +924,7 @@ body {
   align-items: center;
 
   &--static::before {
-    content: '';
+    content: "";
     width: 60px;
     height: 1px;
     background: currentColor;
@@ -966,7 +962,9 @@ body {
   width: 100%;
   height: 100%;
   background-color: rgba(85, 85, 85, 0.545);
-  transition: opacity 300ms linear, visibility 300ms linear;
+  transition:
+    opacity 300ms linear,
+    visibility 300ms linear;
 }
 
 .backdrop.is-hidden .modal {
@@ -1026,7 +1024,9 @@ body {
   padding-left: 40px;
   /* margin-bottom: 28px; */
   background: $second-color;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+  box-shadow:
+    0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   color: $primary-color;
@@ -1062,7 +1062,7 @@ body {
   }
 }
 
-input[type='radio']:checked + label {
+input[type="radio"]:checked + label {
   color: $accent-color;
 }
 
@@ -1083,7 +1083,9 @@ input[type='radio']:checked + label {
   height: 80px;
   max-height: 250px;
   background: $second-color;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+  box-shadow:
+    0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 4px;
   resize: vertical;
