--- a/main.css
+++ b/main.css
@@ -241,7 +241,8 @@ body {
 }
 
 .hero__wrap {
-  padding: 272px 526px 208px 100px;
+  padding: 125px 250px 185px 0px;
+
   flex-grow: 1;
   background-image: linear-gradient(
       rgba(25, 28, 38, 0.2),
@@ -253,6 +254,9 @@ body {
   background-position: center;
   background-color: var(--primary-color);
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  @media screen and (min-width: 1200px) {
+    padding: 272px 526px 208px 100px;
+  }
 }
 
 .hero__pre-title {
